# drizzlepac

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Jenkinsfile  JenkinsfileRT  Jenkinsfile_DISABLED  LICENSE.txt  MANIFEST.in  README  README.local  README.md  arf  azure-pipelines.yml  azure-templates.yml  conftest.py  debug.notes  defsetup.py  new_setup.cfg  pyproject.toml  readthedocs.yml  requirements-dev.txt  setup.cfg  setup.py  setup_hooks.py  tox.ini  version.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  ci.yml  ci_cron.yml  publish-to-pypi.yml  pytest.yml
doc/: .rtd-environment.yml  ADR_readme.md  ADRs.md  Makefile  environment.yml  make.bat
doc/source/: CHANGELOG.rst  CODE_OF_CONDUCT.rst  DEPENDENCIES.rst  LICENSE.rst  ablot.rst  acsobjects.rst  adrizzle.rst  astrodrizzle.rst  astrodrizzle.rsts  astrometry.rst  astrometry_api.rst  baseobjects.rst  betadrizzle.rst  betadrizzle.rsts  blot.rst  catalog_generation.rst  catalog_utils.rst  catalogs.rst  conf.py  drizcr.rst  drizzle.rst  drizzlepac_api.rst  drizzling-images.rst  explanation.rst  getting-started.rst  hap-parameters.rst  hap_glossary.rst  hla.rst  hubble-archival-products.rst  image.rst  image_registration.rst  imagefindpars.rst  imageobject.rst  index.rst  makecustommosaic.rst  mast_data_products.rst  mdztab.rst  median.rst  multivisit.rst  multivisit_api.rst  (+35 more)
drizzlepac/: HAPSequencer.py  __init__.py  ablot.help  ablot.py  acsData.py  adrizzle.help  adrizzle.py  align.py  alignimages.py  astrodrizzle.help  astrodrizzle.py  astrodrizzle_filter.cfg  astrodrizzle_single.cfg  astrodrizzle_total.cfg  buildmask.py  buildwcs.py  catalogs.py  config_testbed.py  createMedian.help  createMedian.py  drizCR.help  drizCR.py  findobj.py  generate_final_product_filenames.py  hapcatalog.py  hapmultisequencer.py  hapsequencer.py  imageObject.py  imagefindpars.help  imagefindpars.py  imgclasses.py  irData.py  linearfit.py  make_cfgobj_files.py  make_custom_mosaic.py  mapreg.help  mapreg.py  mdriz.py  mdzhandler.py  minmed.py  (+42 more)
drizzlepac/comparision_tools/: compare_images.py  compare_sourcelists.py  infrot.py  run_regression_test.py  starmatch_hist.py
drizzlepac/comparison_tools/: compare_images.py  compare_sourcelists.py  run_regression_test.py  starmatch_hist.py
drizzlepac/devutils/: alignment_viewer.py  analyze_mvm_gaia_alignment.py  confirm_execution.py  disp_sources_by_flag.py  fix_json_files.py  generate_ttim_psfs.py  hap_pars_attendance_checker.py  hla2ecsv.py  hla_flag_filter_HLAClassic.py  json_splitter.py  make_cfgobj_files.py  make_hla_classic_region_file.py  make_mask_file.py  pars_utils.py  plot_ci_vs_fwhm.py  readme.now  reset_flags.py  run_config_utils.py  search_skyframes.py  sourcelist_flag_breakdown.py  sourcelist_generation.py  test_display_catalog_bit_populations.py  test_hla_flag_filter.py  validate_hla_flag_filter.py
drizzlepac/haputils/: _detection_utils.py  align_utils.py  analyze.py  astrometric_utils.py  astroquery_utils.py  background_median.py  catalog_utils.py  cell_utils.py  ci_table.py  compare_sourcelists.py  comparison_utils.py  config_utils.py  constants.py  deconvolve_utils.py  diagnostic_json_harvester.py  diagnostic_utils.py  generate_custom_svm_mvm_param_file.py  generate_custom_svm_param_file.py  get_git_rev_info.py  graph_utils.py  hapcut_utils.py  hla_flag_filter.py  hla_flag_filter_HLAClassic.py  infrot.py  laplace_point_cat.py  make_poller_files.py  mvm_quality_analysis.py  mvm_quality_graphics.py  n_gaia_sources_graphics.py  new_wcs_graphics.py  omegaxyz.py  pandas_utils.py  photometry_graphics.py  photometry_tools.py  pipeline_graphics.py  poller_utils.py  processing_utils.py  product.py  quality_analysis.py  read_hla_catalog.py  (+9 more)
drizzlepac/helpers/: io.py  mark.py  utils.py
drizzlepac/hlautils/: Product.py  align_utils.py  analyze.py  astrometric_utils.py  astroquery_utils.py  background_median.py  bitmask.py  catalog_cmd.py  catalog_utils.py  cell_utils.py  ci_table.py  combine_ecsv_files.py  config_utils.py  diagnostic_json_harvester.py  diagnostic_utils.py  get_git_rev_info.py  hla_flag_filter.py  hla_flag_filter_HLAClassic.py  photometry_graphics.py  photometry_tools.py  pipeline_poller_utils.py  poller_utils.py  processing_utils.py  product.py  qa_harvest.py  quality_analysis.py  reformat_docstrings.py  run_sourcelist_generation.py  se_source_generation.py  sourcelist_generation.py  sourcelist_generation_oo.py  sourcelist_utils.py  svm_catalog_analysis.py  svm_quality_analysis.py  testutils.py  updatehdr.py
drizzlepac/htmlhelp/: ablot.html  acsobjects.html  adrizzle.html  astrodrizzle.html  catalogs.html  index.html  (+25 more)
lib/: MultiDrizzle.py  MultiDrizzleObject.py  __init__.py  ablot.py  acsData.py  acs_input.py  acsdata.py  adrizzle.py  astrodither_setup.py  betadrizzle.help  betadrizzle_setup.py  blot.help  blot.py  buildmask.py  buildwcs.py  catalogs.py  convertwcs.py  createMedian.help  createMedian.py  drizCR.help  drizCR.py  drizCr.py  drizzle.help  drizzle.py  drizzleObject.py  imageObject.py  imagefindpars.help  imagefindpars.py  imgclasses.py  instrumentData.py  instrumentdata.py  irData.py  linearfit.py  mdriz.py  mdzhandler.py  minmed.py  nicmosData.py  outputimage.py  pixtopix.help  pixtopix.py  (+29 more)
scripts/: mdriz  resetbits  runastrodriz  updatenpol
src/: arrdrizmodule.c  blot.par  cdrizzleblot.c  cdrizzleblot.h  cdrizzlebox.c  cdrizzlebox.h  cdrizzleio.c  cdrizzleio.h  cdrizzlemap.c  cdrizzlemap.h  cdrizzleutil.c  cdrizzleutil.h  cdrizzlewcs.c  cdrizzlewcs.h  compile_all  compile_blot  compile_drizzle  compile_nblot  compile_satmask  compile_steep  compile_tranback  compile_traxy  compile_wall  compile_wblot  compile_wcs2dr  compile_wdrizzle  compile_wtranback  compile_wtraxy  dr2geo.par  dr2gpar.par  driz_portability.h  drizzle.par  ii_spline2d.x  mkpkg  nblot.par  satmask.par  steep.par  timtem.x  tranback.par  traxy.par  (+18 more)
tests/: combine_ecsv_files.py  conftest.py  resources.py  test_imageObject.py  test_mapreg.py
(+1113 files in other folders)
