[project]
name = 'drizzlepac'
description = """
    HST image combination using the drizzle algorithm to
    combine astronomical images, to model image distortion,
    to remove cosmic rays, and
    generally to improve the fidelity of data in the final image.
    """
readme = { file = 'README.md', content-type = 'text/x-rst' }
requires-python = '>=3.9'
license = { file = "LICENSE.txt" }
authors = [{ name = 'Megan Sosey' }, { name = 'Warren Hack' }, { name = 'Christopher Hanley' }, { name = 'Chris Sontag' }, { name = 'Mihai Cara' }, { name = 'Michael Dulude' }, { name = 'Michele De La Pena' }, { name = 'Steven Goldman' }]
classifiers = [
    'Intended Audience :: Science/Research',
    "Topic :: Scientific/Engineering :: Astronomy",
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9'
]
dependencies = [
    'astropy>=5.0.4',
    'fitsblender>=0.4.2',
    'scipy',
    'matplotlib',
    'stsci.tools>=4.0',
    'stsci.image>=2.3.4',
    'stsci.imagestats',
    'stsci.skypac>=1.0.9',
    'stsci.stimage',
    'stwcs>=1.5.3',
    'tweakwcs>=0.8.2',
    'stregion>=1.1.7',
    'requests',
    'scikit-learn>=0.20',
    'bokeh',
    'pandas',
    'spherical_geometry>=1.2.22',
    'astroquery>=0.4',
    'astrocut<=0.9',
    'photutils>1.5.0',
    'lxml',
    'PyPDF2',
    'scikit-image>=0.14.2',
    'tables',
    'typing_extensions>4.0',
    'markupsafe<=2.0.1',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'sphinx',
    'stsci_rtd_theme',
    'packaging',
    'tomli',
    'numpydoc',
    'sphinx_automodapi',
    'graphviz',
    'astrocut',
]
test = [
    'ci_watson',
    'crds',
    'pytest',
    'pytest-remotedata',
]

[project.urls]
tracker = 'https://github.com/spacetelescope/drizzlepac/issues'
documentation = 'https://drizzlepac.readthedocs.io/en/latest'
source = 'https://github.com/spacetelescope/drizzlepac'

[project.scripts]
mdriz = 'drizzlepac.mdriz:main'
resetbits = 'drizzlepac.resetbits:main'
updatenpol = 'drizzlepac.updatenpol:main'
runastrodriz = 'drizzlepac.runastrodriz:main'
runsinglehap = 'drizzlepac.runsinglehap:main'
runmultihap = 'drizzlepac.runmultihap:main'

[build-system]
requires = ["setuptools>=61",
            "setuptools_scm[toml]>=3.4",
            "wheel",
            "numpy>=1.18",
            "astropy>=5.0.4",
            "markupsafe<=2.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
# package_data values are glob patterns relative to each specific subpackage.
drizzlepac = [
    'README.md',
    'LICENSE.txt',
    'pars/*',
    'pars/hap_pars/*',
    'pars/hap_pars/mvm_parameters/*',
    'pars/hap_pars/mvm_parameters/acs/hrc/*',
    'pars/hap_pars/mvm_parameters/acs/sbc/*',
    'pars/hap_pars/mvm_parameters/acs/wfc/*',
    'pars/hap_pars/mvm_parameters/any/*',
    'pars/hap_pars/mvm_parameters/wfc3/ir/*',
    'pars/hap_pars/mvm_parameters/wfc3/uvis/*',
    'pars/hap_pars/mvm_parameters/wfpc2/wf/*',
    'pars/hap_pars/mvm_parameters/wfpc2/pc/*',
    'pars/hap_pars/svm_parameters/*',
    'pars/hap_pars/svm_parameters/acs/hrc/*',
    'pars/hap_pars/svm_parameters/acs/sbc/*',
    'pars/hap_pars/svm_parameters/acs/wfc/*',
    'pars/hap_pars/svm_parameters/any/*',
    'pars/hap_pars/svm_parameters/wfc3/ir/*',
    'pars/hap_pars/svm_parameters/wfc3/uvis/*',
    'pars/hap_pars/svm_parameters/wfpc2/wf/*',
    'pars/hap_pars/svm_parameters/wfpc2/pc/*',
    'pars/psfs/*',
    'pars/psfs/acs/hrc/*',
    'pars/psfs/acs/sbc/*',
    'pars/psfs/acs/wfc/*',
    'pars/psfs/wfc3/ir/*',
    'pars/psfs/wfc3/uvis/*',
    '*.help',
    'htmlhelp/*',
    'htmlhelp/_*/*',
    'htmlhelp/_*/*/*',
]

[tool.build_sphinx]
builder = 'html'
configuration = 'docs/source/conf.py'
fail_on_warning = false


[tool.pytest.ini_options]
minversion = 5
norecursedirs = [
    '.eggs',
    'build',
    '.tox',
    'doc/build',
    'doc/exts'
]
junit_family = 'xunit2'
inputs_root = 'drizzlepac'
results_root = 'drizzlepac-results'

[tool.ruff]
extend-exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '.eggs',
    '.tox',
]
ignore = [
    'E401', # Multiple imports not allowed on single line
    'E402', # Module level import not at top of file
    'E501', # Line too long
    'E701', # Multiple-statements on one line (colon) NEEDS TO BE FIXED
    'E711', # Comparison to `None` should be `cond is None`
    'E712', # Comparison to `True` should be `cond is True`
    'E713', # Test for membership should be `not in`
    'E714', # Test for object identity should be `is not`
    'E721', # Do not compare types, use `isinstance()`
    'E722', # Do not use bare `except`
    'E741', # Ambiguous variable name
    'F401', # imported but unused
    'F521', # '...'.format(...) has invalid format string: Single '}' encountered in format string
    'F523', # '...'.format(...) has unused arguments at position(s): 0, 1
    'F541', # f-string without any placeholders
    'F632', # Use `==` and `!=` to compare constant literals
    'F633', # Use of `>>` is invalid with `print` function
    'F811', # Redefinition of unused
    'F821', # Undefined name
    'F822', # Undefined name `getHelpAsString` in `__all__`
    'F841', # Local variable is assigned to but never used
]
