[metadata]
name = drizzlepac
description = HST image combination using drizzle
long_description = 'drizzle tools: combines astronomical images, including '
                   'modeling distortion, removing cosmic rays, and generally '
                   'improving fidelity of data in the final image',
long_description_content_type = text/plain
author = Megan Sosey, Warren Hack, Christopher Hanley, Chris Sontag, Mihai Cara
license = BSD-3-Clause
url = https://github.com/spacetelescope/drizzlepac
project_urls =
    Tracker = https://github.com/spacetelescope/drizzlepac/issues
    Documentation = https://drizzlepac.readthedocs.io/en/latest
    Source Code = https://github.com/spacetelescope/drizzlepac
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
[options]
zip_safe = False
python_requires = >=3.8
setup_requires=
    setuptool_scm
install_requires =
    astropy>=5.0.4
    fitsblender>=0.4.2
    scipy
    matplotlib
    stsci.tools>=4.0
    stsci.image>=2.3.4
    stsci.imagestats
    stsci.skypac>=1.0.9
    stsci.stimage
    stwcs>=1.5.3
    tweakwcs>=0.7.2
    stregion
    requests
    scikit-learn>=0.20
    # HAP-pipeline specific:
    bokeh
    pandas
    spherical_geometry>=1.2.22
    astroquery>=0.4
    photutils<1.4.0
    lxml
    PyPDF2
    scikit-image>=0.14.2
    tables
    typing_extensions>4.0
    markupsafe<=2.0.1

[options.extras_require]

test =
    ci_watson
    crds
    pytest
    pytest-remotedata

docs =
    sphinx
    stsci_rtd_theme
    packaging
[options.entry_points]
console_scripts =
    mdriz = drizzlepac.mdriz:main
    resetbits=drizzlepac.resetbits:main
    updatenpol=drizzlepac.updatenpol:main
    runastrodriz=drizzlepac.runastrodriz:main
    runsinglehap=drizzlepac.runsinglehap:main
    runmultihap=drizzlepac.runmultihap:main

[flake8]
count = True
doctests = True
show_source = True
statistics = True
exclude =
    .git,
    __pycache__,
    doc/source/conf.py,
    build,
    dist,
ignore =
    E501,
    E402,
    F403

[tool:pytest]
minversion = 5
#addopts =
norecursedirs = .eggs build
junit_family = xunit2
inputs_root = drizzlepac
results_root = drizzlepac-results

[build_sphinx]
builder = html
warning-is-error = 1
